--- a/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
+++ b/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
@@ -27,6 +27,15 @@
     <ClInclude Include="util.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Chaos0.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="sadx-util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Chaos-common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -42,6 +51,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="util.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Chaos0.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
