--- a/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj
+++ b/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj
@@ -171,6 +171,7 @@
     <ClInclude Include="util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="chaos-common.cpp" />
     <ClCompile Include="Chaos0.cpp" />
     <ClCompile Include="config.cpp" />
     <ClCompile Include="dllmain.cpp" />
