--- a/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
+++ b/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\Chaos">
+      <UniqueIdentifier>{46315142-2527-46c5-a1b8-7dd9cc1c8881}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -54,7 +57,10 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Chaos0.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Chaos</Filter>
+    </ClCompile>
+    <ClCompile Include="chaos-common.cpp">
+      <Filter>Source Files\Chaos</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
