--- a/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
+++ b/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="Chaos-common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Chaos2.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files\Chaos</Filter>
     </ClCompile>
     <ClCompile Include="chaos-common.cpp">
+      <Filter>Source Files\Chaos</Filter>
+    </ClCompile>
+    <ClCompile Include="Chaos2.cpp">
       <Filter>Source Files\Chaos</Filter>
     </ClCompile>
   </ItemGroup>
