--- a/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
+++ b/SADX-Boss-Decompilation/SADX-Boss-Decompilation.vcxproj.filters
@@ -42,6 +42,15 @@
     <ClInclude Include="Chaos2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Chaos4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Chaos6.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Chaos7.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
